Fix screenshot for hidpi displays

BUG: 503823